issue #7 - セットアップツールを作成。

--- a/src/conf.d/tmpbox.ini.sample
+++ b/src/conf.d/tmpbox.ini.sample
@@ -1,5 +1,9 @@
+[User]
+user = tmpbox
+group = tmpbox
+
 [DB]
-ConnectionString = postgresql://tmpbox:tmpbox123@localhost/tmpbox
+connectionstring = mysql://tmpbox_master:password@localhost/tmpbox
 
 [UploadFiles]
-DirectoryRoot = /var/tmpbox/files
+directoryroot = /var/tmpbox
