--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5"
     , "module": "commonjs"
+    , "lib": ["es5", "dom"]
     , "declaration": false
     , "noImplicitAny": false
     , "removeComments": false
