issue #8 - ユーザー登録・編集機能実装完了 issue #10 - セットアップツールが吐き出す設定ファイルのオプション名が全て小文字になるバグを修正

--- a/src/conf.d/tmpbox.ini.sample
+++ b/src/conf.d/tmpbox.ini.sample
@@ -1,9 +1,12 @@
 [User]
-user = tmpbox
-group = tmpbox
+User = tmpbox
+Group = tmpbox
 
 [DB]
-connectionstring = mysql://tmpbox_master:password@localhost/tmpbox
+ConnectionString = mysql://tmpbox_master:password@localhost/tmpbox
 
 [UploadFiles]
-directoryroot = /var/tmpbox
+DirectoryRoot = /var/tmpbox
+
+[Security]
+AutoPasswordLength = 12
