issue #13 - アップロードファイルではなくアプリケーションで扱うファイルの保存ディレクトリを保存するようにした。
併せて、ディレクトリの PK を名前ではなく通し番号に変更。関連する DB 周りの処理を修正。

--- a/src/conf.d/tmpbox.ini.sample
+++ b/src/conf.d/tmpbox.ini.sample
@@ -5,8 +5,10 @@ Group = tmpbox
 [DB]
 ConnectionString = mysql://tmpbox_master:password@localhost/tmpbox
 
-[UploadFiles]
+[Repository]
 DirectoryRoot = /var/tmpbox
+
+[UploadFiles]
 DefaultExpiresDays = 14
 
 [Security]
