--- a/src/conf.d/logging.ini.sample
+++ b/src/conf.d/logging.ini.sample
@@ -1,23 +1,30 @@
 [loggers]
-key = access, error, debug
+keys = root, access, error, debug
 
 [handlers]
-key = acc_cons, acc_file, err_cons, err_file, dbg_cons, dbg_file
+keys = acc_cons, acc_file, err_cons, err_file, dbg_cons, dbg_file
 
 [formatters]
-key = console, file
+keys = console, file
+
+[logger_root]
+level = NOTSET
+handlers =
 
 [logger_access]
 level = INFO
 handlers = acc_cons, acc_file
+qualname = access
 
 [logger_error]
 level = WARNING
 handlers = err_cons, err_file
+qualname = error
 
 [logger_debug]
 level = DEBUG
 handlers = dbg_cons, dbg_file
+qualname = debug
 
 [handler_acc_cons]
 class = StreamHandler
@@ -56,8 +63,8 @@ args = ('/var/tmpbox/log/debug.log',)
 kwargs = {'maxBytes': 5242880, 'backupCount': 10}
 
 [formatter_console]
-format = [%%(levelname)s] %%(name)s: %%(message)s
+format = [%(levelname)s] %(name)s: %(message)s
 
 [formatter_file]
-format = %%(asctime)s [%%(levelname)s] %%(name)s: %%(message)s
-datefmt = %%Y-%%m-%%d %%H:%%M:%%S
+format = %(asctime)s [%(levelname)s] %(name)s: %(message)s
+datefmt = %Y-%m-%d %H:%M:%S
