--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/zxcvbn": "^4.4.0",
     "sass": "^1.25.0",
     "typedoc": "^0.16.10",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "zxcvbn": "^4.4.2"
   }
 }
